--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Keep Learning
 subtitle:
 description:
-keywords:
+keywords: Android, Deep Learning, Tensorflow
 author: Vectoros
 language:
 timezone:
