Using Material-T theme

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,13 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
+
+archive_generator:
+  per_page: 0  
+  yearly: true
+  monthly: true
+  daily: false
+  order_by: -date
   
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -73,7 +80,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: Material-T
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
