--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: Material-T
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
