--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -126,7 +126,7 @@ scheme: Muse
 # Key is the link label showing to end users.
 # Value before `||` delimeter is the target permalink.
 # Value after `||` delimeter is the name of FontAwesome icon. If icon (with or without delimeter) is not specified, globe icon will be loaded.
-#social:
+social:
   GitHub: https://github.com/vectoros || github
   E-Mail: mailto:vectoros@outlook.com || envelope
   #Google: https://plus.google.com/yourname || google
@@ -154,7 +154,7 @@ links_layout: block
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.gif
 # in site  directory(source/uploads): /uploads/avatar.gif
-#avatar: /images/avatar.gif
+avatar: /images/avatar.webp
 
 # Table Of Contents in the Sidebar
 toc:
