--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle:
 description:
 keywords: Android, Deep Learning, Tensorflow
 author: Vectoros
-language:
+language: zh-Hans
 timezone:
 
 # URL
@@ -76,6 +76,11 @@ time_format: HH:mm:ss
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
+
+
+# Site map
+sitemap: 
+    path: sitemap.xml
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
