--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -142,11 +142,11 @@ exturl: false
 # External url should start with http:// or https://
 menu:
   home: / || home
-  #about: /about/ || user
   tags: /tags/ || tags
   categories: /categories/ || th
   archives: /archives/ || archive
-  search: /search/ || search
+  about: /about/ || user
+  # search: /search/ || search
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
   #commonweal: /404/ || heartbeat
