--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ permalink_defaults:
 # Directory
 source_dir: source
 public_dir: public
+psot_asset_folder: true
 tag_dir: tags
 archive_dir: archives
 category_dir: categories
