--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,28 @@ sitemap:
 ## Themes: https://hexo.io/themes/
 theme: next
 
+# Hexo-neat compress
+neat_enable: true
+# 压缩html
+neat_html:
+  enable: true
+  exclude:
+# 压缩css  
+neat_css:
+  enable: true
+  exclude:
+    - '**/*.min.css'
+# 压缩js
+neat_js:
+  enable: true
+  mangle: true
+  output:
+  compress:
+  exclude:
+    - '**/*.min.js'
+    - '**/jquery.fancybox.pack.js'
+    - '**/index.js'
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
