Add comment function

--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,31 @@ neat_js:
     - '**/jquery.fancybox.pack.js'
     - '**/index.js'
 
+gitment:
+  enable: false # 是否开启gitment评论系统
+  # mint: true #
+  count: true # 是否显示评论数
+  lazy: false # 懒加载，设置为ture时需手动展开评论
+  cleanly: true # 是否隐藏'Powered by ...'
+  language: # 语言，置空则随主题的语言
+  github_user: vectoros # Github用户名
+  github_repo: githubpagescomment # 在Github新建一个仓库用于存放评论，这是仓库名
+  client_id: ad65e236934834eb5e57 # 注册OAuth Application时生成
+  client_secret: 69da8ff1986c5547d5956daf47b75b2c95dc9e4f # 注册OAuth Application时生成
+  proxy_gateway: # Address of api proxy, See: https://github.com/aimingoo/intersect
+  redirect_protocol: # Protocol of redirect_uri with force_redirect_protocol when mint enabled
+
+
+gitalk:
+  enable: true
+  githubID: vectoros	 
+  repo: githubpagescomment
+  ClientID: ad65e236934834eb5e57
+  ClientSecret: 69da8ff1986c5547d5956daf47b75b2c95dc9e4f
+  adminUser: vectoros #指定可初始化评论账户
+  distractionFreeMode: true
+
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
