--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "babel-eslint": "^10.0.3",
+    "gitment": "0.0.3",
     "hexo": "^3.9.0",
     "hexo-abbrlink": "^2.0.5",
     "hexo-asset-image": "0.0.3",
