--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.9.0"
+    "version": "5.4.0"
   },
   "dependencies": {
     "babel-eslint": "^10.0.3",
     "gitment": "0.0.3",
-    "hexo": "^3.9.0",
+    "hexo": "^5.0.0",
     "hexo-abbrlink": "^2.0.5",
     "hexo-asset-image": "0.0.3",
-    "hexo-deployer-git": "^1.0.0",
+    "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
@@ -21,6 +21,7 @@
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.3"
+    "hexo-server": "^0.3.3",
+    "hexo-theme-next": "^8.3.0"
   }
 }
