--- a/_config.yml
+++ b/_config.yml
@@ -84,6 +84,12 @@ time_format: HH:mm:ss
 per_page: 10
 pagination_dir: page
 
+# Local Search搜索功能
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
 
 # Site map
 sitemap: 
