--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,10 @@ skip_render:
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+external_link: 
+  enable: true # Open external links in new tab
 filename_case: 0
+updated_option: date
 render_drafts: false
 post_asset_folder: false
 relative_link: false
